name:                pact
version:             2.3.8
synopsis:            Smart contract language library and REPL
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
license:             BSD3
license-file:        LICENSE
author:              Stuart Popejoy
maintainer:          stuart@kadena.io
copyright:           Copyright (C) 2016 Stuart Popejoy
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  exposed-modules:
    Crypto.Hash.Blake2Native
    Pact.Compile
    Pact.Eval
    Pact.Native
    Pact.Native.Db
    Pact.Native.Internal
    Pact.Native.Keysets
    Pact.Native.Ops
    Pact.Native.Time
    Pact.Parse
    Pact.Persist
    Pact.Persist.Pure
    Pact.PersistPactDb
    Pact.Repl
    Pact.Repl.Lib
    Pact.Repl.Types
    Pact.Typechecker
    Pact.Types.Hash
    Pact.Types.Lang
    Pact.Types.Logger
    Pact.Types.Native
    Pact.Types.Orphans
    Pact.Types.Runtime
    Pact.Types.Typecheck
    Pact.Types.Util
    Pact.Types.Version


  -- other-extensions:
  build-depends:
      Decimal >= 0.4.2 && < 0.5
    , aeson >= 0.11.3.0 && < 1.3
    , ansi-wl-pprint >= 0.6.7.3 && < 0.7
    , attoparsec >= 0.13.0.2 && < 0.14
    , base >=4.9.0.0 && < 4.10
    , base16-bytestring >=0.1.1.6 && < 0.2
    , bound >= 2 && < 2.1
    , bytestring >=0.10.8.1 && < 0.11
    , cereal >=0.5.4.0 && < 0.6
    , containers >= 0.5.7.1 && < 0.6
    , data-default >= 0.7.1.1 && < 0.8
    , deepseq >= 1.4.2.0 && < 1.5
    , directory >= 1.2.6.2 && < 1.4
    , exceptions >= 0.8.3 && < 0.9
    , filepath >= 1.4.1.0 && < 1.5
    , hashable >= 1.2 && < 1.3
    , hspec >= 2.2.4 && < 2.5
    , lens >= 4.14 && < 4.16
    , lens-aeson >= 1.0.0.5 && < 1.1
    , mtl >= 2.2.1 && < 2.3
    , old-locale >= 1.0.0.7 && < 1.1
    , optparse-applicative >= 0.12.1.0 && < 0.15
    , parsers >= 0.12.4 && < 0.13
    , safe >= 0.3.11 && < 0.4
    , scientific >= 0.3.4.9 && < 0.4
    , semigroups >= 0.18.2 && < 0.19
    , stm >= 2.4.4.1 && < 2.5
    , text >= 1.2.2.1 && < 1.3
    -- kadena ghcjs compat fork
    , thyme == 0.3.6.0
    , transformers >= 0.5.2.0 && < 0.6
    , trifecta >= 1.6 && < 1.8
    , unordered-containers >= 0.2.7.2 && < 0.3
    , utf8-string >= 1.0.1.1 && < 1.1
    , vector >= 0.11.0.0 && < 0.13
    , vector-space >= 0.10.4 && < 0.13
    , haskeline >= 0.7.3
    -- Was 0.7.4

  if !impl(ghcjs)
    build-depends:
        blake2
      , criterion >= 1.3 && < 1.5
      , statistics >= 0.14 && < 0.15

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto -fprof-auto-calls

test-suite hspec
  type: exitcode-stdio-1.0
  main-is: hspec.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
      base
    , hspec
    , pact
    , aeson
    , containers
    , directory
    , filepath
    , data-default
    , lens
    , unordered-containers
    , ansi-wl-pprint
    , bytestring
  other-modules:
    Blake2Spec
    KeysetSpec
    PactTestsSpec
    ParserSpec
    TypecheckSpec
    TypesSpec
